------------------------------------------------------------------------
r2216 | rdahnke | 2023-06-19 22:33:04

Changed paths:
 M CHANGES.txt
 M cat_conf_extopts.m
 M cat_surf_createCS3.m
 M cat_vol_pbt.m

Fixed:     Added suggestions from Torben Lund for expert surface outputs in
           cat_conf_extopts and . 
Changed:   Updated the cat_surf_createCS3 pipeline to reduce problems with blood
           Vessels. Removed the not working additional blood vessel correction. 
           Added SRP options to further improve reconstruction quality and added
           options in cat_conf_extopts. 
Changed:   Updated cat_vol_pbt and (i) removed old code (speedmap and filters), 
           and (ii) introduced a new filtering to reduce overestimations in the  
           initial thickness maps that caused ugly topology defects in the CS3
           pipeline.                
------------------------------------------------------------------------
r2215 | rdahnke | 2023-06-19 17:19:44

Changed paths:
 M CHANGES.txt
 M cat_main_amap.m
 M cat_main_amap1639.m
 M cat_main_cleanup.m
 M cat_main_updateSPM.m
 M cat_main_updateSPM1639.m
 M cat_run_job.m
 M cat_run_job1639.m

Fixed:     Improved more flexible detection of skull-stripped background in 
           cat_run_job1639 to support also non-zero values (required for some 
           simulated T1 images as the atrophy phantom in (Rusak et al., 2021). 
           cat_run_job is not compatible due to MP2Rage modification that has
           need further corrections later.  
           Extended background detections in cat_main_updateSPM1639.
Changed:   Corrected WMH class definition in cat_main_amap1639. 

------------------------------------------------------------------------
r2214 | rdahnke | 2023-06-19 15:30:34

Changed paths:
 M CHANGES.txt
 M cat_main.m
 M cat_main1639.m
 M cat_main_reportstr.m
 M cat_run.m
 M cat_vol_partvol.m
 M cat_vol_partvol1639.m
